task19/task19-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-19
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
